--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "bootstrap": "^5.0.2",
+        "chart.js": "^3.5.0",
+        "mdbootstrap": "^4.20.0",
+        "mdbreact": "^5.1.0",
         "parse": "^3.3.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.0-beta.4",
         "react-chartjs-2": "^3.0.4",
+        "react-context": "^0.0.3",
         "react-dom": "^17.0.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
