--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "name": "happy-app",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://github.com/shuroo/FE-2021-happy-app",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "bootstrap": "^5.0.2",
         "chart.js": "^3.5.0",
+        "gh-pages": "^3.2.3",
         "mdbootstrap": "^4.20.0",
         "mdbreact": "^5.1.0",
         "parse": "^3.3.0",
@@ -25,6 +27,8 @@
         "yarn": "^1.22.11"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
