--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "happy-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://github.com/shuroo/FE-2021-happy-app",
+    "homepage": "https://shuroo.github.io/FE-2021-happy-app",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
