--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-chartjs-2": "^3.0.4",
         "react-context": "^0.0.3",
         "react-dom": "^17.0.2",
+        "react-dropdown": "^1.9.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
