--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-bootstrap": "^2.0.0-beta.4",
         "react-chartjs-2": "^3.0.4",
         "react-context": "^0.0.3",
+        "react-date-picker": "^8.3.2",
         "react-dom": "^17.0.2",
         "react-dropdown": "^1.9.2",
         "react-router": "^5.2.0",
