--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-date-picker": "^8.3.2",
         "react-dom": "^17.0.2",
         "react-dropdown": "^1.9.2",
+        "react-iframe": "^1.8.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
